# free-fall-simulator

./: .clang-format  CMakeLists.txt  README.md
etc/: debian-packages.txt  macos-brew-packages.txt  shell.nix
include/free_fall_sim/app/: ProgramOptions.hpp
include/free_fall_sim/app/impl/: ProgramOptions.inl  ProgramOptions.ipp
include/free_fall_sim/body/: SphericalBody1D.h  SphericalBody1D.hpp
include/free_fall_sim/body/impl/: SphericalBody1D.inl  SphericalBody1D.ipp
include/free_fall_sim/gravity/: ConstantFieldGravitationalModel1D.h  ConstantFieldGravitationalModel1D.hpp  GravitationalModel1D.h  GravitationalModel1D.hpp  NewtonianGravitationalModel1D.h  NewtonianGravitationalModel1D.hpp
include/free_fall_sim/gravity/impl/: ConstantFieldGravitationalModel1D.inl  ConstantFieldGravitationalModel1D.ipp  NewtonianGravitationalModel1D.inl  NewtonianGravitationalModel1D.ipp
include/free_fall_sim/gui/: gui_main_loop.h
include/free_fall_sim/simulation/: simulation.h  simulation.hpp
include/free_fall_sim/simulation/detail/: simulation.hpp
include/free_fall_sim/simulation/detail/impl/: simulation.inl  simulation.ipp
include/free_fall_sim/simulation/impl/: simulation.inl  simulation.ipp
src/app/: main.cpp
src/app/gui/: gui.cpp  gui.h  gui_main_loop.cpp  gui_main_loop.h  gui_main_loop.hpp
src/gui/: gui.cpp  gui_main_loop.cpp
test/: CMakeLists.txt
test/src/free_fall_sim/app/: ProgramOptions_test.cpp
test/src/free_fall_sim/body/: SphericalBody1D_test.cpp
test/src/free_fall_sim/gravity/: ConstantFieldGravitationalModel1D_test.cpp  NewtonianGravitationalModel1D_test.cpp
test/src/free_fall_sim/simulation/: simulation_test.cpp
